[package]
name = "peashape"
version = "0.2.0"
authors = ["ljedrz <ljedrz@gmail.com>"]
edition = "2024"
description = "A traffic-shaping middleware for pea2pea nodes: constant-rate or Poisson outbound traffic, automatic frame padding, and priority lanes for cover traffic."
license = "CC0-1.0 OR MIT"
repository = "https://github.com/ljedrz/peashape"
homepage = "https://github.com/ljedrz/peashape"
documentation = "https://docs.rs/peashape"
readme = "README.md"
categories = ["network-programming", "asynchronous"]
keywords = ["p2p", "networking", "privacy", "cover-traffic", "middleware"]
rust-version = "1.88"

[dependencies]
pea2pea = "0.56"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }
bytes = "1"
tracing = "0.1"
rand = "0.9"
parking_lot = "0.12"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
